# k8s-ai-cloud-testbed

./: .gitignore  .gitlab-ci.yml  CLAUDE.md  README.md  TODO.md  Taskfile.yaml  backstage-catalog.yaml  core-app-of-apps.yaml
.beads/: issues.jsonl
.claude/agents/: cluster-health.md  experiment-validator.md
.claude/commands/: create-experiment.md  run-experiment.md
.github/: dependabot.yml
.github/workflows/: build-analyzer.yaml  build-components.yaml  build-operator.yaml  cicd-sample.yaml  deploy-site.yaml
argocd-apps/: app-of-apps.yaml  core-utils.yaml  demo-app.yaml  routes.yaml
argocd-apps/gateway-api/: default-gateway.yaml  gateway-api.yaml  values.yaml
argocd-apps/k6/: job-template.yaml  k6-operator.yaml  k6.yaml
bootstrap/: install.sh
bootstrap/argocd/: values.yaml
components/: core-app-of-apps.yaml
components/apps/naive-db/src/: Cargo.toml
components/apps/naive-db/src/src/: handlers.rs  main.rs  metrics.rs  store.rs
components/stacks/: loki.yaml
docs/: gitops-patterns.md  roadmap-consolidation-analysis.md  roadmap-consolidation-summary.md  roadmap-new-structure.md  roadmap-visual-summary.md  roadmap.md  strategic-review-2026-01.md  troubleshooting.md
docs/adrs/: ADR-001-gitlab-ci-for-iac.md  ADR-003-gitops-webhook-delivery.md  (+12 more)
experiments/: Taskfile.yaml
hub/: Taskfile.yaml
kind/: Taskfile.yaml  cluster-config.yaml
lab/: Taskfile.yaml
platform/: Taskfile.talos-bootstrap.yaml  Taskfile.talos-hub.yaml
scripts/: openbao-unseal-seed.sh
site/: astro.config.mjs  package-lock.json  package.json
tasks/: local.yaml
(+937 files in other folders)
