[package]
name = "naive-db"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
prometheus = "0.13"
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
strip = true
lto = true
codegen-units = 1
